# moth

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  QUICKSTART.md  README.md  rust-toolchain.toml
.github/scripts/: cargo-annotate.sh
.github/workflows/: cross-check.yml  freebsd.yml  release.yml  rust.yml
actor/: Cargo.toml
actor/src/: lib.rs
anthropic/src/: http.rs  json.rs  lib.rs  parse.rs
audit/: Cargo.toml
audit/src/: lib.rs
benches/src/: bench_helper.rs  history_bench.rs  json_bench.rs  lib.rs  shell_bench.rs  wire_bench.rs
cli/: Cargo.toml
cli/src/: doctor.rs  main.rs
cli/tests/: mock_cli.rs
compact/: Cargo.toml
compact/src/: lib.rs
docs/adr/: 0001-curl-sys-not-rustls.md  0002-cut-list.md  0003-metrics-kept.md
examples/: 02-openrouter.sh
fstools/: Cargo.toml
fstools/src/: lib.rs
git/: Cargo.toml
git/src/: lib.rs
harness/: Cargo.toml
harness/src/: adapters.rs  instance.rs  lib.rs  mock.rs  model.rs  persist.rs  sandbox.rs  session.rs  tools.rs
integration/: Cargo.toml
integration/src/: lib.rs
mcp/: Cargo.toml
mcp/src/: jsonrpc.rs  lib.rs  server.rs
mcp/src/transport/: http.rs  mod.rs  stdio.rs
metrics/src/: lib.rs
openai/src/: http.rs  json.rs  lib.rs  parse.rs
persist/src/: lib.rs
runlog/: Cargo.toml
runlog/src/: lib.rs
rust/: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  QUICKSTART.md  README.md
rust/actor/src/: lib.rs
rust/anthropic/: Cargo.toml
rust/anthropic/src/: http.rs  json.rs  lib.rs
rust/audit/: Cargo.toml
rust/audit/src/: lib.rs
rust/benches/: Cargo.toml
rust/benches/src/: audit_bench.rs  bench_helper.rs  lib.rs
rust/cli/: Cargo.toml
rust/cli/src/: doctor.rs  main.rs
rust/cli/tests/: mock_cli.rs
rust/cluster/: Cargo.toml
rust/cluster/src/: lib.rs
rust/compact/src/: lib.rs
rust/docs/adr/: 0001-curl-sys-not-rustls.md
rust/examples/: 01-hello.sh  03-mcp-client.sh  04-skill.sh
rust/fstools/: Cargo.toml
rust/fstools/src/: lib.rs
rust/git/src/: lib.rs
rust/gitea/: Cargo.toml
rust/gitea/src/: http.rs  lib.rs
rust/github/: Cargo.toml
rust/github/src/: http.rs  lib.rs
rust/harness/: Cargo.toml
rust/harness/src/: adapters.rs  lib.rs  mock.rs  model.rs  persist.rs  sandbox.rs  session.rs  tools.rs
rust/integration/: Cargo.toml
rust/integration/src/: lib.rs
rust/jj/: Cargo.toml
rust/jj/src/: lib.rs
rust/mcp/: Cargo.toml
rust/mcp/src/: lib.rs  server.rs  transport.rs
rust/mcp/src/transport/: http.rs  stdio.rs
rust/mcp_server/: Cargo.toml
rust/mcp_server/src/: lib.rs
rust/metrics/: Cargo.toml
rust/openai/: Cargo.toml
rust/openai/src/: http.rs  lib.rs
rust/persist/: Cargo.toml
rust/persist/src/: lib.rs
rust/runlog/src/: lib.rs
rust/server/src/: lib.rs
rust/subagent/: Cargo.toml
rust/subagent/src/: lib.rs
rust/tmpl/: Cargo.toml
rust/tmpl/src/: lib.rs
rust/vshell/: Cargo.toml
rust/vshell/src/: ast.rs  exec.rs  lex.rs  lib.rs
rust/wire/src/: lib.rs  ndjson.rs  retry.rs  scan.rs  sse.rs
server/: Cargo.toml
server/src/: lib.rs
subagent/: Cargo.toml
subagent/src/: lib.rs
tmpl/src/: lib.rs
vshell/: Cargo.toml
vshell/src/: exec.rs  lex.rs  lib.rs  parse.rs
wire/: Cargo.toml
wire/src/: framer.rs  ndjson.rs  retry.rs  scan.rs  sse.rs  tag.rs
