[package]
name = "compact"
version = "0.0.1"
edition = "2024"
publish = false
description = "Message-history compaction. Char-budget split that respects tool_use/tool_result pairing, plus a model-driven summariser for the head."

[lib]
path = "src/lib.rs"

[dependencies]
harness = { path = "../harness" }
