[package]
name = "cli"
version = "0.0.1"
edition = "2024"
publish = false
description = "One-shot agent runner. Wires anthropic + vshell + audit through the harness."

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
actor = { path = "../actor" }
anthropic = { path = "../anthropic" }
fstools = { path = "../fstools" }
harness = { path = "../harness" }
mcp = { path = "../mcp" }
persist = { path = "../persist" }
server = { path = "../server" }
tmpl = { path = "../tmpl" }
vshell = { path = "../vshell" }
