[package]
name = "gitea"
version = "0.0.1"
edition = "2024"
publish = false
description = "Minimal Gitea / Forgejo / Codeberg REST client. libcurl via curl-sys, JSON via anthropic::json."

[lib]
path = "src/lib.rs"

[dependencies]
curl-sys = { version = "0.4", features = ["static-curl", "static-ssl"] }
anthropic = { path = "../anthropic" }
