[package]
name = "github"
version = "0.0.1"
edition = "2024"
publish = false
description = "Minimal GitHub REST API client. libcurl via curl-sys, JSON via anthropic::json. Works with GitHub Enterprise via base_url override."

[lib]
path = "src/lib.rs"

[dependencies]
curl-sys = { version = "0.4", features = ["static-curl", "static-ssl"] }
anthropic = { path = "../anthropic" }
